Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5.15, 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL)
-
None
-
linux
Description
I have a master slave setup. And two tables calculate different checksums, while the data seems be in sync.
checksum table A, ASlave extended;
|
| Table | Checksum |
| A | 1139480600 |
| ASlave | 1134561865 |
(select * from ASlave ORDER BY ID ) except (select * from A ORDER BY ID);
|
Empty set (2.461 sec)
(select * from A ORDER BY ID ) except (select * from ASlave ORDER BY ID);
|
|
Empty set (2.418 sec)
Any other command to check for differences in tables?
Attachments
Issue Links
- is duplicated by
-
MDEV-11783 Assertion `checksum_start + checksum_length == f->ptr' failed in mysql_checksum_table
-
- Closed
-
- relates to
-
MDEV-36460 Checksum Table Quick is not updated correctly
-
- Open
-
-
MDEV-15519 CHECKSUM TABLE gives different results across MariaDB 10.0 and 10.2
-
- Confirmed
-